[FIX] web_enterprise: mobile: missing padding in search filters

--- a/web_enterprise/static/src/scss/touch_device.scss
+++ b/web_enterprise/static/src/scss/touch_device.scss
@@ -5,13 +5,15 @@
         padding-bottom: 15px;
     }
 
-    .btn-sm, .btn-sm { // FIXME
-        font-size: $font-size-base;
-        padding: 7px 14px;
-    }
+    .btn {
+        &, .btn-sm {
+            font-size: $font-size-base;
+            padding: 7px 14px;
+        }
 
-    .btn.fa {
-        font-size: 1.3em;
-        padding: 2px 10px;
+        &.fa {
+            font-size: 1.3em;
+            padding: 2px 10px;
+        }
     }
 }
